<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_toolbar"
            style="@style/Widget.Ods.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00D1CDCD"
            app:navigationIcon="@mipmap/ic_round"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/light_background"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="?attr/colorPrimaryDark"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/my_progress"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.23"
                        android:text="@string/total"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:textColor="@color/green"
                        android:text="@string/right"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:textColor="@color/red"
                        android:text="@string/wrong"/>


                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:background="@color/light_card_background">

                <ImageView
                    android:id="@+id/iv_lectures"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/item_title_1"
                    android:src="@drawable/ic_classroom"
                    app:layout_constraintBottom_toTopOf="@+id/iv_quest"
                    app:layout_constraintEnd_toStartOf="@+id/iv_flashcards"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_flashcards"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/item_title_2"
                    android:src="@drawable/ic_brain"
                    app:layout_constraintBottom_toTopOf="@+id/iv_exam"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_lectures"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_quest"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/item_title_3"
                    android:src="@drawable/ic_exam"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_exam"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_lectures" />

                <ImageView
                    android:id="@+id/iv_exam"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/item_title_4"
                    android:src="@drawable/ic_diploma"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_quest"
                    app:layout_constraintTop_toBottomOf="@+id/iv_flashcards" />

                <TextView
                    android:id="@+id/itemTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/item_title_1"
                    app:layout_constraintEnd_toEndOf="@+id/iv_lectures"
                    app:layout_constraintStart_toStartOf="@+id/iv_lectures"
                    app:layout_constraintTop_toBottomOf="@+id/iv_lectures" />

                <TextView
                    android:id="@+id/itemTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/item_title_2"
                    app:layout_constraintEnd_toEndOf="@+id/iv_flashcards"
                    app:layout_constraintStart_toStartOf="@+id/iv_flashcards"
                    app:layout_constraintTop_toBottomOf="@+id/iv_flashcards" />

                <TextView
                    android:id="@+id/itemTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/item_title_3"
                    app:layout_constraintEnd_toEndOf="@+id/iv_quest"
                    app:layout_constraintStart_toStartOf="@+id/iv_quest"
                    app:layout_constraintTop_toBottomOf="@+id/iv_quest" />

                <TextView
                    android:id="@+id/itemTitle4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/item_title_4"
                    app:layout_constraintEnd_toEndOf="@+id/iv_exam"
                    app:layout_constraintStart_toStartOf="@+id/iv_exam"
                    app:layout_constraintTop_toBottomOf="@+id/iv_exam" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_background"
                app:cardCornerRadius="4dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/details"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />



            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>